--- a/.github/workflows/sync_fork.yml
+++ b/.github/workflows/sync_fork.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Create and Push Branch 
         run: |          
-          git checkout weekly-sync-branch
+          git checkout -B weekly-sync-branch
           git merge upstream/main --no-commit
           git reset -- ./.github
           git commit -m "Merge in upstream/main"
